containerization/unicornbase/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "tobackend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "prefix": "/whoami",
                      "cluster": "whoami",
                      "timeout_ms": 0
                    },
                    {
                      "prefix": "/getmyip",
                      "cluster": "whoami",
                      "timeout_ms": 0
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "router",
                "config": {}
              }
            ]
          }
        }

      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:9001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "google",
        "type": "strict_dns",
        "connect_timeout_ms": 250,
        "lb_type": "round_robin",
        "hosts": [
          {"url": "tcp://google.com:80"}
        ]
      }, {
        "name": "whoami",
        "type": "strict_dns",
        "connect_timeout_ms": 250,
        "lb_type": "round_robin",
        "hosts": [
          {"url": "tcp://dummyapp:9010"}
        ]
      }
    ]
  }
}
